--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.1.5
+  flutter_riverpod: ^3.0.0
+  ferry: ^0.16.0+1
+  ferry_flutter: ^0.9.1-dev.1
+  graphql_flutter: ^5.2.1
 
 dev_dependencies:
   flutter_test:
