--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -15,11 +15,12 @@ dependencies:
   ferry: ^0.16.0+1
   ferry_flutter: ^0.9.1-dev.1
   graphql_flutter: ^5.2.1
+  ferry_generator: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-
+  build_runner: ">=2.4.0 <2.7.2"
 flutter:
   uses-material-design: true
