--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "litestar[standard]>=2.17.0",
-    "psycopg>=3.2.10",
+    "psycopg[binary]>=3.2.10",
     "sqlalchemy>=2.0.43",
     "strawberry-graphql[debug-server]>=0.282.0",
 ]
