--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   ferry: ^0.16.1+2
   
   build_runner: ^2.5.4
-  provider: ^6.1.5+1
   ferry_flutter: ^0.9.1+1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +27,8 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   ferry_generator: ^0.12.0+2
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 flutter:
 
 
