--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "litestar[standard]>=2.17.0",
+    "msgspec>=0.19.0",
     "psycopg[binary]>=3.2.10",
+    "redis[hiredis]>=6.4.0",
     "sqlalchemy>=2.0.43",
     "strawberry-graphql[debug-server]>=0.282.0",
 ]
