--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   build_runner: ^2.5.4
   ferry_flutter: ^0.9.1+1
   flutter_riverpod: ^2.6.1
+  built_collection: ^5.1.1
 
 dev_dependencies:
   flutter_test:
